--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "streaming",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
